set up structure and css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Hana Nicholas</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/reset.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -23,7 +27,7 @@
     <div class="container">
 
     <section class="image-section">
-        <img src="#" alt="Portfolio Image">
+        <img src="images/img_29_EDIT.JPG" alt="Portfolio Image">
     </section>
     
     <section id="o-mne" class="about">
@@ -41,5 +45,6 @@
         <p>Seznam absolvovaných kurzů...</p>
     </section>
 </div>
+
 </body>
 </html>
