--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav class="navbar">
             <h1 class="logo">Hana Nicholas</h1>
             <ul class="nav-links">
-                <li><a href="index.html">Domů</a></li>
                 <li><a href="#reference">Reference</a></li>
                 <li><a href="#kurzy">Kurzy</a></li>
-                <li><a href="#kontakt">Kontakt</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="">Rezervace</a></li>
             </ul>
         </nav>
     </header>
