--- a/index.html
+++ b/index.html
@@ -82,15 +82,16 @@
             <p>💡 Žádné předem dané kurzy – každý student si vybere, na co se chce zaměřit!</p>
             <p>Chceš se zbavit přízvuku, lépe se domluvit na dovolené nebo projít FCE/CAE zkouškou?</p>
             <p>Přizpůsobíme společně lekce přesně tomu, co potřebuješ.</p>
-            
+            <div class="courses-text">
             <h3>Jak to funguje?</h3>
-            <ol>
+            <ul>
                 <li>Vybereš si balíček hodin podle toho, kolik lekcí chceš.</li>
                 <li>Řekneš mi, na co se chceš soustředit (konverzace, gramatika, výslovnost, příprava na certifikát…).</li>
                 <li>Společně sestavíme plán, který tě začne posouvat dopředu.</li>
-            </ol>
+            </ul>
+        </div>
             
-            <h3>🛂 Balíčky lekcí</h3>
+            <h3>Balíčky lekcí</h3>
             <table>
                 <tr>
                     <th>Balíček</th>
