--- a/index.html
+++ b/index.html
@@ -75,6 +75,27 @@
                 <h3>Viktorie V. ⭐️⭐️⭐️⭐️⭐️</h3>
                 <p>Byla jsem typický ztracený případ. Léta jsem se učila jazyk, ale nebyla jsem ho schopná aktivně používat. Jen myšlenka, že se mě nějaký cizinec zeptá na pomoc, mě děsila. Díky přístupu Hany se ale vše za pár měsíců změnilo a nyní se mohu aktivně zapojit i do pracovních jednání.</p>
             </div>
+            
+            <div class="testimonial">
+                <h3>Barbora P. ⭐️⭐️⭐️⭐️⭐️</h3>
+                <p>Pokud hledáte skvělou doučující angličtiny, tím je přesně Hana. Dokáže perfektně vysvětlit gramatiku, pomáhat s konverzací a její přístup je naprosto jedinečný. Vždy dokázala najít způsob, jak látku vysvětlit tak, aby dávala smysl a nikdy nebyl problém zopakovat nebo vysvětlit danou věc jinak když bylo potřeba. Každá hodina s ní byla nejen přínosná, ale i motivující, protože umí podpořit a dodat člověku sebedůvěru. Ukázala mi, že angličtina se dá zvládnout s úsměvem. Díky její trpělivosti a podporujícímu duchu jsem zlepšila svou angličtinu i známky ve škole. A úspěšně zvládla maturitní zkoušku</p>
+            </div>
+
+            <div class="testimonial">
+                <h3>Šárka P. ⭐️⭐️⭐️⭐️⭐️</h3>
+                <p>Hana je výborná lektorka angličtiny, která svým přístupem dokáže motivovat studenty k učení. Svou práci vykonává s obrovským nadšením a profesionalitou. Její přístup k výuce je velmi přátelský a podporující, což vytváří příjemné prostředí pro učení. Díky Haně jsem zaznamenala výrazné zlepšení svých dovedností v angličtině a získala větší sebevědomí v komunikaci. Hanu vřele doporučuji všem, kteří hledají kvalitního lektora angličtiny.</p>
+            </div>
+
+            <div class="testimonial">
+                <h3>Sára N. ⭐️⭐️⭐️⭐️⭐️</h3>
+                <p>Skvělá učitelka! Učení s paní Nicholas je vždy zábavné. Přichází se zajímavými způsoby učení. Velice doporučuji :)</p>
+            </div>
+
+            <div class="testimonial">
+                <h3>Dita P. ⭐️⭐️⭐️⭐️⭐️</h3>
+                <p>Hana je zkušená a profesionální lektorka, která skvěle spojuje výhody českého a anglického rodilého mluvčího. Díky tomu má jedinečný vhled do chyb, které čeští studenti často dělají, a umí je efektivně vysvětlit a opravit. Její přístup je založen na důvěře a podporuje studenty v mluvení, což je pro mě velmi motivující. Nikdy se nesetkám s přístupem, který by mě zastrašil kvůli chybám, ale naopak mě Hana povzbuzuje k tomu, abych se nebála komunikovat v angličtině.</p>
+                <p>Pokud hledáte lektorku, která je trpělivá, podporující, a zároveň profesionální, doporučuji Hannu bez váhání. Její přístup k výuce je inspirující a velmi efektivní.</p>
+            </div>
         </section>
         
         <section id="kurzy" class="courses">
