form, contact page

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="contact-form">
                     <h3>Napište mi</h3>
-                    <form>
+                    <form action="https://formspree.io/f/xgvkvojj" method="POST">
                         <div class="form-group">
                             <label for="name">Jméno</label>
                             <input type="text" id="name" name="name" required>
@@ -66,6 +66,6 @@
         <p>made by <a href="https://www.instagram.com/rozero_n/" target="_blank" rel="noopener noreferrer">Roger Nicholas</a></p>
     </footer>
 
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
